@wip sonarqube static analysis check